--- a/index.html
+++ b/index.html
@@ -92,14 +92,18 @@
 
 <!-- Ana sehife part -->
 <section id="#home" >
-  <div class="container home-margin-top">
-    <div class="row">
-      <div class="col-6 home-margin-top">
-        <h2>FOR A THE BEST MORNİNG</h2>
-        <p>İklim koruması toprakla başlar! Toprak kalitesini iyileştirerek daha fazla iklim direncine, iklim korumasına ve sürdürülebilir gıda üretimine ulaşıyoruz.</p>
+  
+  <div class="container col-xxl-8 px-4 py-5">
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+      <div class="col-10 col-sm-8 col-lg-6">
+        <img src="img/agrotarim1.jpg" class="d-block mx-lg-auto img-fluid rounded-4" alt="Bootstrap Themes"  loading="lazy">
       </div>
-      <div class="col-6">
-        <img src="img/agrotarim.jpg" width="90%" alt="" class="border-5">
+      <div class="col-lg-6">
+        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">FOR A THE BEST MORNİNG</h1>
+        <p class="lead">İklim koruması toprakla başlar! Toprak kalitesini iyileştirerek daha fazla iklim direncine, iklim korumasına ve sürdürülebilir gıda üretimine ulaşıyoruz.</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+          <a href="contact.html" class="btn btn-primary btn-lg px-4 me-md-2">Əlaqə</a>
+        </div>
       </div>
     </div>
   </div>
