--- a/index.html
+++ b/index.html
@@ -1,114 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://getbootstrap.com/docs/5.3/assets/css/docs.css"
-      rel="stylesheet"
-    />
-    <title>Growrob</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body >
-    <!-- navbar part  -->
-<header class="navbar-background sticky-top">
-  <nav class="navbar navbar-expand-lg  sticky-top">
-    <div class="container">
-      <a class="navbar-brand " href="index.html">
-        <img
-          src="img/growrob.png"
-          alt="Growrob"
-          width="100px"
-          height="100px"
-        />
-      </a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet" />
+  <title>Growrob</title>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    crossorigin="anonymous" />
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+  <!-- navbar part  -->
+  <header>
+    <nav class="container mt-5">
+      <div class="d-flex justify-content-between align-items-center">
+        <div >
+          <img src="img/growrob.png" alt="Growrob" width="100px" height="100px" />
+        </div>
+        <div class="d-none d-xl-block d-lg-block d-xxl-block">
+          <ul class="d-flex align-items-center list-unstyled ">
+            <li class="nav-item me-4">
+              <a class="nav-link active" aria-current="page" href="index.html#about">Haqqımızda</a>
+            </li>
+            <li class="nav-item me-4">
+              <a class="nav-link active" aria-current="page" href="index.html#services">Xidmətlər</a>
+            </li>
+            <li class="nav-item me-4">
+              <a class="nav-link active" aria-current="page" href="#">Necə işləyir</a>
+            </li>
+            <li class="nav-item me-4">
+              <a class="nav-link active" aria-current="page" href="#">Prototip</a>
+            </li>
+            <li class="nav-item me-4">
+              <a class="nav-link active" aria-current="page" href="#">Referanslar</a>
+            </li>
+            <li class="nav-item me-4">
+              <a class="nav-link active" aria-current="page" href="#">Bloq</a>
+            </li>
+            <li class="nav-item me-4">
+              <a class="nav-link active" aria-current="page" href="#">Əlaqə</a>
+            </li>
+          </ul>
+        </div>
+        <div class="d-lg-none d-xl-none ">
+
+
+
+          <i class="fa-solid fa-bars" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
+            aria-controls="offcanvasRight"></i>
+          
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+              <div class="offcanvas-header">
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+              </div>
+              <div class="offcanvas-body">
+                  <div>
+                    <img src="img/growrob.png" class="ms-1" alt="Growrob" width="100px" height="100px" />
+                  </div>
+                  <ul class="  list-unstyled ">
+                    <li class="nav-item me-4 mt-4 fw-bold ms-4">
+                      <a class="nav-link active" aria-current="page" href="index.html#about">Haqqımızda</a>
+                    </li>
+                    <li class="nav-item me-4 mt-4 fw-bold ms-4">
+                      <a class="nav-link active" aria-current="page" href="index.html#services">Xidmətlər</a>
+                    </li>
+                    <li class="nav-item me-4 mt-4 fw-bold ms-4">
+                      <a class="nav-link active" aria-current="page" href="#">Necə işləyir</a>
+                    </li>
+                    <li class="nav-item me-4 mt-4 fw-bold ms-4">
+                      <a class="nav-link active" aria-current="page" href="#">Prototip</a>
+                    </li>
+                    <li class="nav-item me-4 mt-4 fw-bold ms-4">
+                      <a class="nav-link active" aria-current="page" href="#">Referanslar</a>
+                    </li>
+                    <li class="nav-item me-4 mt-4 fw-bold ms-4">
+                      <a class="nav-link active" aria-current="page" href="#">Bloq</a>
+                    </li>
+                    <li class="nav-item me-4 mt-4 fw-bold ms-4">
+                      <a class="nav-link active" aria-current="page" href="#">Əlaqə</a>
+                    </li>
+                  </ul>
+              </div>
+              <div class="container">
+                © GroWrob. Bütün hüquqlar qorunur. By <a href="https://neymantech.com" class="nav-link text-decoration-underline">Neyman Enterprise Technologies </a>
+              </div>
+            </div>
       
 
-          <li class="nav-item me-4">
-            <a class="nav-link active" aria-current="page" href="index.html#about"
-              >Haqqımızda</a
-            >
-          </li>
-          <li class="nav-item me-4">
-            <a class="nav-link active" aria-current="page" href="index.html#services"
-              >Xidmətlər</a
-            >
-          </li>
-          <li class="nav-item me-4">
-            <a class="nav-link active" aria-current="page" href="#"
-              >Necə işləyir</a
-            >
-          </li>
-          <li class="nav-item me-4">
-            <a class="nav-link active" aria-current="page" href="#"
-              >Prototip</a
-            >
-          </li>
-          <li class="nav-item me-4">
-            <a class="nav-link active" aria-current="page" href="#"
-              >Referanslar</a
-            >
-          </li>
-          <li class="nav-item me-4">
-            <a class="nav-link active" aria-current="page" href="#"
-              >Bloq</a
-            >
-          </li>
-          <li class="nav-item me-4">
-            <a class="nav-link active" aria-current="page" href="#"
-              >Əlaqə</a
-            >
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</header>
+        </div>
+    </nav>
+  </header>
+  <!-- Ana sehife part -->
+  <section id="#home">
 
-<!-- Ana sehife part -->
-<section id="#home" >
-  
-  <div class="container col-xxl-8 px-4 py-5">
-    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-      <div class="col-10 col-sm-8 col-lg-6">
-        <img src="img/agrotarim1.jpg" class="d-block mx-lg-auto img-fluid rounded-4" alt="Bootstrap Themes"  loading="lazy">
-      </div>
-      <div class="col-lg-6">
-        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">FOR A THE BEST MORNİNG</h1>
-        <p class="lead">İklim koruması toprakla başlar! Toprak kalitesini iyileştirerek daha fazla iklim direncine, iklim korumasına ve sürdürülebilir gıda üretimine ulaşıyoruz.</p>
-        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <a href="contact.html" class="btn btn-primary btn-lg px-4 me-md-2">Əlaqə</a>
+    <div class="container col-xxl-8 px-4 py-5">
+      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-12 col-sm-12 col-lg-6">
+          <img src="img/agrotarim1.jpg" class="d-block mx-lg-auto img-fluid rounded-4" alt="Bootstrap Themes"
+            loading="lazy">
+        </div>
+        <div class="col-lg-6">
+          <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">FOR A THE BEST MORNİNG</h1>
+          <p class="lead">İklim koruması toprakla başlar! Toprak kalitesini iyileştirerek daha fazla iklim direncine,
+            iklim korumasına ve sürdürülebilir gıda üretimine ulaşıyoruz.</p>
+          <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+            <a href="contact.html" class="btn btn-primary btn-lg px-4 me-md-2">Əlaqə</a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
-<!-- About -->
+  </section>
+  <!-- About -->
 
-  </body>
+</body>
+
 </html>
